Stage some conflicted files
